# shop_assist

./: README.md  cursorrules  pyproject.toml
backend/: main.py
backend/api/: catalog.py  chat.py  menu.py
backend/content/menus/: 6f3cb14a.json
backend/core/: menu.py  openai_assistants.py
data/assistants/: ShopAssistCashierMcDonaldsLV.md  ShopAssistWaiterMcDonaldsLV.md
temp/: api_contracts.md  design_plan.md  flow_diagram.md  progress_plan.md
